--- a/.gitignore
+++ b/.gitignore
@@ -124,6 +124,25 @@ sympy-plots-for-*.tex/
 # WinEdt
 *.bak
 *.sav
+
+# Windows image file caches
+Thumbs.db
+ehthumbs.db
+
+# Folder config file
+Desktop.ini
+
+# Recycle Bin used on file shares
+$RECYCLE.BIN/
+
+# Windows Installer files
+*.cab
+*.msi
+*.msm
+*.msp
+
+# Windows shortcuts
+*.lnk
+
 Report/Master.pdf
 Report/Master.lox
-Report/billeder/Thumbs.db
